<resources>
    <string name="app_name">Projeto5</string>
    <string name="nome">Nome do Pet</string>
    <string name="raca">Raça</string>
    <string name="dono">Dono do Pet</string>
    <string name="specie">Espécie</string>
    <string name="telefone">Telefone</string>
    <string name="_99999_1486">99999-1486</string>
    <string name="email">Email</string>
    <string name="excluir">Excluir</string>
    <string name="favorito">Favorito</string>
    <string name="editarpet">Editar</string>
</resources>
